feat(exercise): add private exercise CRUD